src/frontend/parser/SpecParser.cpp

// Generated from Spec.g4 by ANTLR 4.12.0


#include "SpecVisitor.h"

#include "SpecParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SpecParserStaticData final {
  SpecParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SpecParserStaticData(const SpecParserStaticData&) = delete;
  SpecParserStaticData(SpecParserStaticData&&) = delete;
  SpecParserStaticData& operator=(const SpecParserStaticData&) = delete;
  SpecParserStaticData& operator=(SpecParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag specParserOnceFlag;
SpecParserStaticData *specParserStaticData = nullptr;

void specParserInitialize() {
  assert(specParserStaticData == nullptr);
  auto staticData = std::make_unique<SpecParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "typedef", "def", "invdef", "decl", "fixpoint", 
      "path", "include", "command", "global_anno", "anno_struct", "loop_inv", 
      "section_begin", "section_end", "type", "expr", "expr_op", "term", 
      "tuple", "func_call", "forall_expr", "exists_expr", "var_anno", "let_stmt", 
      "when_stmt", "match_stmt", "match_branch", "assert_stmt", "anno_stmt", 
      "if_stmt", "inductive_decl", "induct_arm", "record_decl", "record_fields", 
      "record_def_stmt", "record_fields_def", "value", "mk", "name", "number", 
      "string", "bool", "veclen", "vecget", "vecreplace"
    },
    std::vector<std::string>{
      "", "':='", "'.'", "':'", "'Invariant'", "'Include'", "'Hint'", "'Anno'", 
      "'array'", "'{'", "'}'", "'base'", "','", "'size'", "'max_elems'", 
      "'Loop_inv'", "'Z'", "'bool'", "'string'", "'Type'", "'Prop'", "'list'", 
      "'option'", "'ZMap.t'", "'PMap.t'", "'SMap'", "'Vector'", "'=='", 
      "'['", "']'", "':<'", "'in'", "';'", "'|'", "'=>'", "'{|'", "'|}'", 
      "'veclen'", "'vecget'", "'vecreplace'", "'mk'", "'Inductive'", "'Record'", 
      "'Fixpoint'", "'Section'", "'End'", "'::'", "'++'", "'+'", "'-'", 
      "'*'", "'/'", "'mod'", "'<<'", "'>>'", "'&'", "'|''", "'&&'", "'||'", 
      "'=\\u003F'", "'<>\\u003F'", "'>\\u003F'", "'<\\u003F'", "'>=\\u003F'", 
      "'<=\\u003F'", "'=s'", "'<>s'", "'=l'", "'@'", "'#'", "'$'", "'/\\'", 
      "'\\/'", "'~'", "'!'", "'->'", "'<->'", "'='", "'<>'", "'>'", "'<'", 
      "'>='", "'<='", "'('", "')'", "'if'", "'then'", "'let'", "'else'", 
      "'Parameter'", "'Definition'", "'when'", "'forall'", "'exists'", "'match'", 
      "'return'", "'with'", "'end'", "'rely'", "'anno'", "'true'", "'false'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "MK", "INDUC", "RECORD", "FIXPOINT", "SECTION", 
      "SECTION_END", "APPEND", "CONCAT", "ADD", "MINUS", "MULT", "DIV", 
      "MOD", "LSHIFT", "RSHIFT", "BITAND", "BITOR", "BAND", "BOR", "BEQ", 
      "BNE", "BGT", "BLT", "BGE", "BLE", "SEQ", "SNE", "LIST_EQ", "GET", 
      "SET", "NTH", "AND", "OR", "NOT", "BNOT", "IMPLIES", "IFONLYIF", "EQUAL", 
      "NOT_EQUAL", "GT", "LT", "GTE", "LTE", "LP", "RP", "IF", "THEN", "LET", 
      "ELSE", "PARAM", "DEF", "WHEN", "FORALL", "EXISTS", "MATCH", "RETURN", 
      "WITH", "END", "RELY", "ANNO", "TRUE", "FALSE", "NUMBER", "STR", "ID", 
      "COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  specParserStaticData = staticData.release();
}

}

SpecParser::SpecParser(TokenStream *input) : SpecParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SpecParser::SpecParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SpecParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *specParserStaticData->atn, specParserStaticData->decisionToDFA, specParserStaticData->sharedContextCache, options);
}

SpecParser::~SpecParser() {
  delete _interpreter;
}

const atn::ATN& SpecParser::getATN() const {
  return *specParserStaticData->atn;
}

std::string SpecParser::getGrammarFileName() const {
  return "Spec.g4";
}

const std::vector<std::string>& SpecParser::getRuleNames() const {
  return specParserStaticData->ruleNames;
}

const dfa::Vocabulary& SpecParser::getVocabulary() const {
  return specParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SpecParser::getSerializedATN() const {
  return specParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

SpecParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpecParser::ProgramContext::EOF() {
  return getToken(SpecParser::EOF, 0);
}

std::vector<SpecParser::StatementContext *> SpecParser::ProgramContext::statement() {
  return getRuleContexts<SpecParser::StatementContext>();
}

SpecParser::StatementContext* SpecParser::ProgramContext::statement(size_t i) {
  return getRuleContext<SpecParser::StatementContext>(i);
}


size_t SpecParser::ProgramContext::getRuleIndex() const {
  return SpecParser::RuleProgram;
}


std::any SpecParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::ProgramContext* SpecParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, SpecParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 68169720955120) != 0) || _la == SpecParser::PARAM

    || _la == SpecParser::DEF) {
      setState(92);
      statement();
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(98);
    match(SpecParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SpecParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SpecParser::Section_beginContext* SpecParser::StatementContext::section_begin() {
  return getRuleContext<SpecParser::Section_beginContext>(0);
}

SpecParser::Section_endContext* SpecParser::StatementContext::section_end() {
  return getRuleContext<SpecParser::Section_endContext>(0);
}

SpecParser::TypedefContext* SpecParser::StatementContext::typedef_() {
  return getRuleContext<SpecParser::TypedefContext>(0);
}

SpecParser::DefContext* SpecParser::StatementContext::def() {
  return getRuleContext<SpecParser::DefContext>(0);
}

SpecParser::DeclContext* SpecParser::StatementContext::decl() {
  return getRuleContext<SpecParser::DeclContext>(0);
}

SpecParser::InvdefContext* SpecParser::StatementContext::invdef() {
  return getRuleContext<SpecParser::InvdefContext>(0);
}

SpecParser::FixpointContext* SpecParser::StatementContext::fixpoint() {
  return getRuleContext<SpecParser::FixpointContext>(0);
}

SpecParser::Inductive_declContext* SpecParser::StatementContext::inductive_decl() {
  return getRuleContext<SpecParser::Inductive_declContext>(0);
}

SpecParser::Record_declContext* SpecParser::StatementContext::record_decl() {
  return getRuleContext<SpecParser::Record_declContext>(0);
}

SpecParser::IncludeContext* SpecParser::StatementContext::include() {
  return getRuleContext<SpecParser::IncludeContext>(0);
}

SpecParser::CommandContext* SpecParser::StatementContext::command() {
  return getRuleContext<SpecParser::CommandContext>(0);
}

SpecParser::Global_annoContext* SpecParser::StatementContext::global_anno() {
  return getRuleContext<SpecParser::Global_annoContext>(0);
}

SpecParser::Loop_invContext* SpecParser::StatementContext::loop_inv() {
  return getRuleContext<SpecParser::Loop_invContext>(0);
}


size_t SpecParser::StatementContext::getRuleIndex() const {
  return SpecParser::RuleStatement;
}


std::any SpecParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::StatementContext* SpecParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SpecParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(100);
      section_begin();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      section_end();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(102);
      typedef_();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(103);
      def();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(104);
      decl();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(105);
      invdef();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(106);
      fixpoint();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(107);
      inductive_decl();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(108);
      record_decl();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(109);
      include();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(110);
      command();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(111);
      global_anno();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(112);
      loop_inv();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypedefContext ------------------------------------------------------------------

SpecParser::TypedefContext::TypedefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpecParser::TypedefContext::DEF() {
  return getToken(SpecParser::DEF, 0);
}

SpecParser::NameContext* SpecParser::TypedefContext::name() {
  return getRuleContext<SpecParser::NameContext>(0);
}

SpecParser::TypeContext* SpecParser::TypedefContext::type() {
  return getRuleContext<SpecParser::TypeContext>(0);
}


size_t SpecParser::TypedefContext::getRuleIndex() const {
  return SpecParser::RuleTypedef;
}


std::any SpecParser::TypedefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitTypedef(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::TypedefContext* SpecParser::typedef_() {
  TypedefContext *_localctx = _tracker.createInstance<TypedefContext>(_ctx, getState());
  enterRule(_localctx, 4, SpecParser::RuleTypedef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    match(SpecParser::DEF);
    setState(116);
    name();
    setState(117);
    match(SpecParser::T__0);
    setState(118);
    type(0);
    setState(119);
    match(SpecParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefContext ------------------------------------------------------------------

SpecParser::DefContext::DefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpecParser::DefContext::DEF() {
  return getToken(SpecParser::DEF, 0);
}

SpecParser::NameContext* SpecParser::DefContext::name() {
  return getRuleContext<SpecParser::NameContext>(0);
}

SpecParser::TypeContext* SpecParser::DefContext::type() {
  return getRuleContext<SpecParser::TypeContext>(0);
}

SpecParser::ExprContext* SpecParser::DefContext::expr() {
  return getRuleContext<SpecParser::ExprContext>(0);
}

std::vector<SpecParser::Var_annoContext *> SpecParser::DefContext::var_anno() {
  return getRuleContexts<SpecParser::Var_annoContext>();
}

SpecParser::Var_annoContext* SpecParser::DefContext::var_anno(size_t i) {
  return getRuleContext<SpecParser::Var_annoContext>(i);
}


size_t SpecParser::DefContext::getRuleIndex() const {
  return SpecParser::RuleDef;
}


std::any SpecParser::DefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitDef(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::DefContext* SpecParser::def() {
  DefContext *_localctx = _tracker.createInstance<DefContext>(_ctx, getState());
  enterRule(_localctx, 6, SpecParser::RuleDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    match(SpecParser::DEF);
    setState(122);
    name();
    setState(126);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SpecParser::LP) {
      setState(123);
      var_anno();
      setState(128);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(129);
    match(SpecParser::T__2);
    setState(130);
    type(0);
    setState(131);
    match(SpecParser::T__0);
    setState(132);
    expr();
    setState(133);
    match(SpecParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InvdefContext ------------------------------------------------------------------

SpecParser::InvdefContext::InvdefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SpecParser::NameContext* SpecParser::InvdefContext::name() {
  return getRuleContext<SpecParser::NameContext>(0);
}

SpecParser::ExprContext* SpecParser::InvdefContext::expr() {
  return getRuleContext<SpecParser::ExprContext>(0);
}


size_t SpecParser::InvdefContext::getRuleIndex() const {
  return SpecParser::RuleInvdef;
}


std::any SpecParser::InvdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitInvdef(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::InvdefContext* SpecParser::invdef() {
  InvdefContext *_localctx = _tracker.createInstance<InvdefContext>(_ctx, getState());
  enterRule(_localctx, 8, SpecParser::RuleInvdef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    match(SpecParser::T__3);
    setState(136);
    name();
    setState(137);
    match(SpecParser::T__0);
    setState(138);
    expr();
    setState(139);
    match(SpecParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

SpecParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpecParser::DeclContext::PARAM() {
  return getToken(SpecParser::PARAM, 0);
}

SpecParser::NameContext* SpecParser::DeclContext::name() {
  return getRuleContext<SpecParser::NameContext>(0);
}

SpecParser::TypeContext* SpecParser::DeclContext::type() {
  return getRuleContext<SpecParser::TypeContext>(0);
}


size_t SpecParser::DeclContext::getRuleIndex() const {
  return SpecParser::RuleDecl;
}


std::any SpecParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::DeclContext* SpecParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 10, SpecParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(141);
    match(SpecParser::PARAM);
    setState(142);
    name();
    setState(143);
    match(SpecParser::T__2);
    setState(144);
    type(0);
    setState(145);
    match(SpecParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FixpointContext ------------------------------------------------------------------

SpecParser::FixpointContext::FixpointContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpecParser::FixpointContext::FIXPOINT() {
  return getToken(SpecParser::FIXPOINT, 0);
}

SpecParser::NameContext* SpecParser::FixpointContext::name() {
  return getRuleContext<SpecParser::NameContext>(0);
}

SpecParser::TypeContext* SpecParser::FixpointContext::type() {
  return getRuleContext<SpecParser::TypeContext>(0);
}

SpecParser::ExprContext* SpecParser::FixpointContext::expr() {
  return getRuleContext<SpecParser::ExprContext>(0);
}

std::vector<SpecParser::Var_annoContext *> SpecParser::FixpointContext::var_anno() {
  return getRuleContexts<SpecParser::Var_annoContext>();
}

SpecParser::Var_annoContext* SpecParser::FixpointContext::var_anno(size_t i) {
  return getRuleContext<SpecParser::Var_annoContext>(i);
}


size_t SpecParser::FixpointContext::getRuleIndex() const {
  return SpecParser::RuleFixpoint;
}


std::any SpecParser::FixpointContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitFixpoint(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::FixpointContext* SpecParser::fixpoint() {
  FixpointContext *_localctx = _tracker.createInstance<FixpointContext>(_ctx, getState());
  enterRule(_localctx, 12, SpecParser::RuleFixpoint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    match(SpecParser::FIXPOINT);
    setState(148);
    name();
    setState(152);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SpecParser::LP) {
      setState(149);
      var_anno();
      setState(154);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(155);
    match(SpecParser::T__2);
    setState(156);
    type(0);
    setState(157);
    match(SpecParser::T__0);
    setState(158);
    expr();
    setState(159);
    match(SpecParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PathContext ------------------------------------------------------------------

SpecParser::PathContext::PathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpecParser::PathContext::STR() {
  return getToken(SpecParser::STR, 0);
}


size_t SpecParser::PathContext::getRuleIndex() const {
  return SpecParser::RulePath;
}


std::any SpecParser::PathContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitPath(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::PathContext* SpecParser::path() {
  PathContext *_localctx = _tracker.createInstance<PathContext>(_ctx, getState());
  enterRule(_localctx, 14, SpecParser::RulePath);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(161);
    match(SpecParser::STR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeContext ------------------------------------------------------------------

SpecParser::IncludeContext::IncludeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SpecParser::PathContext* SpecParser::IncludeContext::path() {
  return getRuleContext<SpecParser::PathContext>(0);
}


size_t SpecParser::IncludeContext::getRuleIndex() const {
  return SpecParser::RuleInclude;
}


std::any SpecParser::IncludeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitInclude(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::IncludeContext* SpecParser::include() {
  IncludeContext *_localctx = _tracker.createInstance<IncludeContext>(_ctx, getState());
  enterRule(_localctx, 16, SpecParser::RuleInclude);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(163);
    match(SpecParser::T__4);
    setState(164);
    path();
    setState(165);
    match(SpecParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommandContext ------------------------------------------------------------------

SpecParser::CommandContext::CommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SpecParser::ExprContext* SpecParser::CommandContext::expr() {
  return getRuleContext<SpecParser::ExprContext>(0);
}


size_t SpecParser::CommandContext::getRuleIndex() const {
  return SpecParser::RuleCommand;
}


std::any SpecParser::CommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitCommand(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::CommandContext* SpecParser::command() {
  CommandContext *_localctx = _tracker.createInstance<CommandContext>(_ctx, getState());
  enterRule(_localctx, 18, SpecParser::RuleCommand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(167);
    match(SpecParser::T__5);
    setState(168);
    expr();
    setState(169);
    match(SpecParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Global_annoContext ------------------------------------------------------------------

SpecParser::Global_annoContext::Global_annoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SpecParser::NameContext* SpecParser::Global_annoContext::name() {
  return getRuleContext<SpecParser::NameContext>(0);
}

SpecParser::Anno_structContext* SpecParser::Global_annoContext::anno_struct() {
  return getRuleContext<SpecParser::Anno_structContext>(0);
}


size_t SpecParser::Global_annoContext::getRuleIndex() const {
  return SpecParser::RuleGlobal_anno;
}


std::any SpecParser::Global_annoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpecVisitor*>(visitor))
    return parserVisitor->visitGlobal_anno(this);
  else
    return visitor->visitChildren(this);
}

SpecParser::Global_annoContext* SpecParser::global_anno() {
  Global_annoContext *_localctx = _tracker.createInstance<Global_annoContext>(_ctx, getState());
  enterRule(_localctx, 20, SpecParser::RuleGlobal_anno);
